# narratoon

./: .env.example  README.md  install.sh  main.py  pyproject.toml
src/: audio_generation.py  image_generation.py  image_generation_local.py  prompts.py  settings.py  text_generation.py  video_generation.py
