[project]
name = "narratoon"
version = "0.1.0"
description = ""
authors = [
    {name = "gi6rgi",email = "georgiibochorishvili@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "openai (>=1.64.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "gradio-client (>=1.7.1,<2.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "setuptools (>=75.8.0,<76.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
